--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -4,15 +4,16 @@
 {% block saml_content %}
 
     {% if not user_details.NIH_username or not user_details.NIH_active %} {# No eRA account, no dbGaP #}
-        <p>
-        Apply for dbGaP Authorized Access to access underlying Level 1 genomics data.
-        </p>
+
 
         {% if not user_details.NIH_username %}
+            <p>
+            Apply for dbGaP Authorized Access to access underlying Level 1 genomics data.
+            </p>
            <a href="{% url 'demo:saml_index' %}?sso">Associate with eRA Commons Account</a>
         {% else %}
-            <a href="{% url 'demo:saml_index' %}?sso">Log in with your eRA Commons Account {{ user_details.NIH_username }}</a>
-            <a href="{% url 'unlink_accounts' %}">Unlink {{ user_details.email }} from the NIH username {{ user_details.NIH_username }}</a>
+            <a href="{% url 'demo:saml_index' %}?sso">Log in with your NIH identity: {{ user_details.NIH_username }}</a>
+            <a href="{% url 'unlink_accounts' %}">Unlink {{ user_details.email }} from the NIH identity: {{ user_details.NIH_username }}</a>
         {% endif %}
         <a href="https://dbgap.ncbi.nlm.nih.gov/aa/wga.cgi?page=login" target="_blank">Learn More</a>
 
