--- a/templates/variables/variables_select.html
+++ b/templates/variables/variables_select.html
@@ -27,9 +27,9 @@
             <div class="page-action-group" role="menubar">
                 <li role="menuitem">
                     {% if workbook %}
-                        <button id="addToAnalysis" class="btn btn-default">Apply to Analysis</button>
+                        <button id="addToWorksheet" class="btn btn-default">Apply to Worksheet</button>
                     {% else %}
-                        <button id="addToNewAnalysis" class="btn btn-default">Apply to New Analysis</button>
+                        <button id="addToNewWorksheet" class="btn btn-default">Apply to New Worksheet</button>
                     {% endif %}
                 </li>
                 <li role="menuitem">
