-> igv-view form checkbox persistence

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -242,6 +242,9 @@
     .menu-bar a.btn, .menu-bar .dropdown
         float: right
 
+    #readgroup_list
+        display: none
+
     #filter-panel
         .panel
             .panel-heading
