-> Entire series of checked files should now be submitted to IGV, not just current page -> Checks will be held between pages -> List is sent as a hidden input field which is deserialized by the igv view

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -242,7 +242,7 @@
     .menu-bar a.btn, .menu-bar .dropdown
         float: right
 
-    #readgroup_list
+    .hidden_form_value
         display: none
 
     #filter-panel
