--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -32,16 +32,6 @@
                 <div class="cohort-title col-md-8">
                     <h3><a href="{% url 'cohort_details' cohort.id %}" aria-label="Back to Cohort"><i class="fa fa-chevron-left"></i> {{ cohort.name }}</a></h3>
                 </div>
-                <div class="menu-items-right col-md-4">
-                    <div class="dropdown dropdown-menu-right space-top-5">
-                        <a role="button" class="dropdown-toggle " type="button" id="create-dropdown" data-toggle="dropdown" aria-label="Dropdown Menu" aria-expanded="true">
-                            <i class="fa fa-bars"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="create-dropdown">
-                            <li role="menuitem"><a href="{{ download_url }}" title="Download Files as CSV"><i class="fa fa-download"></i> Download File List as CSV</a></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -68,6 +58,18 @@
 
 
         <div id="content-panel" class="col-md-9">
+            <div class="panel">
+                <div class="panel-heading">
+                    <input type="submit" form ="view-igv" value="Launch IGV" class="btn btn-primary pull-right" style="display: none;"/>
+                    <h4>Selected Files</h4>
+                </div>
+                <div class="panel-body">
+                    <div id="tokenfield-holder">
+                        <!-- "selected files tokenizer" -->
+                        <textarea name="selected-files" class="form-control tokenfield" id="selected-files" placeholder="Select a file"></textarea>
+                    </div>
+                </div>
+            </div>
             <div class="filelist-panel panel">
                 <div class="panel-heading">
                     <h4>File Listing</h4>
@@ -77,12 +79,11 @@
                         <input type="text" class="hidden_form_value" id="checked_list_input" name="checked_list" data-type="checked_list">
                         {% csrf_token %}
                         <p>Showing 20 files of <span class="file-count">unknown</span>. Page: <span class="page-num">1</span></p>
+                        <a id="download-link" href="{{ download_url }}" title="Download Files as CSV" class="pull-right"><i class="fa fa-download"></i> Download File List as CSV</a>
                         <div>
                             <a role="button" id="prev-page" class="btn btn-default disabled">Previous Page</a>
                             <a role="button" id="next-page" class="btn btn-default">Next Page</a>
                             <span class="spinner"><i class="fa fa-spin fa-spinner hidden"></i></span>
-
-                            <input type="submit" value="Launch IGV" class="btn btn-primary pull-right" style="display: none;"/>
                         </div>
 
                         <table class="table table-striped file-list-table" aria-label="File Listing Table">
