-> running selection count, color-coded limit when the limit is reached -> fixed size on the tokenfield -> warning and disabling checkboxes when limit is hit

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -245,13 +245,18 @@
     .hidden_form_value
         display: none
 
+    .file-list
+        div.tokenfield
+            height: 11em
+            scroll: auto
+
     #filter-panel
         .panel
             .panel-heading
                 background-color: #fff
 
             .panel-body
-                padding: 10px 10px 0px 10px
+                padding: 10px 10px 10px 10px
                 ul
                     list-style: none
                     padding-left: 10px
