-> Alert is now a dismissable display on top of the selected files list -> Made the initial page load less clunky to watch

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -246,9 +246,22 @@
         display: none
 
     .file-list
+        .alert-dismissable
+            display: none
+        #selected-files
+            height: 11em
+            border: none
+            border: none
+            -webkit-box-shadow: none
+            padding: 0
         div.tokenfield
             height: 11em
             scroll: auto
+            border: none
+            -webkit-box-shadow: none
+            padding: 0
+        #selected-files-tokenfield
+            border: none
 
     #filter-panel
         .panel
