--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -64,7 +64,11 @@
                     <h4>Selected Files</h4>
                 </div>
                 <div class="panel-body file-list">
-                    <p><span id="selected-count">0</span> file(s) selected (<span id="selected-file-limit">limit 5</span>)</p>
+                    <div class="alert alert-warning alert-dismissable">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        The maximum number of files which can be viewed in IGV simultaneously is <span class="file-limit">#</span>.
+                    </div>
+                    <p><span id="selected-count">0</span> file(s) selected (<span id="selected-file-limit">limit <span class="file-limit">#</span></span>)</p>
                     <div id="tokenfield-holder">
                         <!-- "selected files tokenizer" -->
                         <textarea name="selected-files" class="form-control tokenfield" id="selected-files" placeholder="Select files"></textarea>
