--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -85,6 +85,8 @@
                     <p>
                         Apply for "cloud credits" and your own Google Cloud project by submitting a request <a href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/request-gcp" target="_blank">here</a>.
                     </p>
+
+                    <p>Go to the <a href="http://console.cloud.google.com" target="_blank">Google Cloud Console</a>.</p>
                 {% else %}
                     <p><i class="fa fa-check-circle"></i> Connected to Google Cloud Platform</p>
                     <hr>
