--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -46,7 +46,7 @@
                     <ul class="search-checkbox-list" id="{{ attr }}">
                         {% for platform in platform_counts %}
                             <li>
-                                <input type="checkbox" name="platform-selected" id="{{ platform.platform }}" >
+                                <input data-platform-count="{{ platform.count }}" type="checkbox" name="platform-selected" id="{{ platform.platform }}" >
                                 <label for="{{ platform.platform }}">{{ platform.platform|get_readable_name }}</label>
                                 <span class="count">({{ platform.count }})</span>
                             </li>
@@ -64,7 +64,7 @@
                     <h4>Selected Files</h4>
                 </div>
                 <div class="panel-body file-list">
-                    <div class="alert alert-warning alert-dismissable">
+                    <div id="file-max-alert" class="alert alert-warning alert-dismissable">
                         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                         The maximum number of files which can be viewed in IGV simultaneously is <span class="file-limit">#</span>.
                     </div>
@@ -76,6 +76,11 @@
                 </div>
             </div>
             <div class="filelist-panel panel">
+                <div id="file-list-warning" class="alert alert-warning alert-dismissable" style="display: none;">
+                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    The maximum number of files which can be downloaded in a list is <span class="file-list-limit">#</span>. Your selections currently total
+                    <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left to limit the size of your file download list.
+                </div>
                 <div class="panel-heading">
                     <a id="download-link" href="{{ download_url }}" title="Download Files as CSV" class="pull-right"><i class="fa fa-download"></i> Download File List as CSV</a>
                     <h4>File Listing</h4>
