Proposed enhancement to allow users to download an entire cohort's file listing, regardless of size: -> Max listings set in GenespotRE/settings.py, currently 85000 -> The expected total file count is determined in JS based on the chosen filters and passed to the streaming_csv_view -> If this number is over the max listings from GenespotRE/settings.py, the endpoint is given a limit and offset to request in blocks which are then gathered up by the view and returned in a single CSV response
 Related change:
 -> Max number of files which can be opened in IGV is now set in GenespotRE/settings.py and passed down to JS via the cohort_filelist template
 -> Removed various warnings about max file listing count and its related JS code

--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -76,11 +76,6 @@
                 </div>
             </div>
             <div class="filelist-panel panel">
-                <div id="file-list-warning" class="alert alert-warning alert-dismissable" style="display: none;">
-                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    The maximum number of files which can be downloaded in a list is <span class="file-list-limit">#</span>. Your selections currently total
-                    <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left to limit the size of your file download list.
-                </div>
                 <div class="panel-heading">
                     <a id="download-link" href="{{ download_url }}" title="Download Files as CSV" class="pull-right"><i class="fa fa-download"></i> Download File List as CSV</a>
                     <h4>File Listing</h4>
@@ -146,6 +141,7 @@
     var total_files = 0;
     var download_url = '{{ download_url }}';
     var ajax_update_url = '{% url 'cohort_filelist_ajax' cohort.id %}';
+    var SEL_FILE_MAX = '{{  sel_file_max }}';
     </script>
 {% endblock %}
 
