--- a/templates/workbooks/workbook_samples.html
+++ b/templates/workbooks/workbook_samples.html
@@ -39,7 +39,7 @@
                             <td class="name-col"><a href="{% url 'workbook_detail' workbook.id %}">{{ workbook.name }}</a></td>
                             <td> {{ workbook.worksheet_set.count }}</td>
                             <td> {{ workbook.owner|upper }}</td>
-                            <td> {{ workbook.last_date_saved}}</td>
+                            <td> {{ workbook.last_date_saved|date:'M d, Y, g:i a'}}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
