-> Per enh #1297, Revision Hisotry on cohort details page will now list the filters applied for 'Applied Filters' revisions

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -231,6 +231,15 @@
         .category-0
             fill: #2196F3
             stroke: #2196F3
+    .applied-filters
+        margin-bottom: 8px
+        span
+            background-color: #ceeaff
+            padding: 3px 10px 3px 10px
+            border-radius: 10px
+        span:hover
+            background-color: darken(#ceeaff, 10%)
+
 
 #cohort-filelist
     padding-top: 15px
