--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -232,11 +232,12 @@
             fill: #2196F3
             stroke: #2196F3
     .applied-filters
-        margin-bottom: 8px
         span
             background-color: #ceeaff
             padding: 3px 10px 3px 10px
             border-radius: 10px
+            margin-bottom: 5px
+            display: inline-block
         span:hover
             background-color: darken(#ceeaff, 10%)
 
