--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,7 @@
     </div>
     <div class="container">
         {% if messages %}
+            {% autoescape off %}
             <div class="row">
                 <div class="col-lg-12">
                     {% for message in messages %}
@@ -90,6 +91,7 @@
                     {% endfor %}
                 </div>
             </div>
+            {% endautoescape %}
         {% endif %}
         <div class="row">{% block content %}{% endblock %}</div>
     </div>
