-> Multiple clicks on 'Comment' button for Workbooks and Cohorts should no longer save more than one comment at a time. -> Adjusted CSS so the bottom of the gene and variable favorites pages will now have enough space to scroll down and see the flyout menu for the last row.

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -40,3 +40,7 @@
   height: 25px
   border-right: 1px solid $isb-dark
   vertical-align: middle
+
+#genes_list, #variable_list
+  .panel-body
+    margin-bottom: 50px
