-> Dashboard link in subnav

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -71,6 +71,9 @@
     {% if user.is_authenticated %}
     <nav class="nav subnav collapse" role="navigation" id="subnav">
         <ul class="container">
+            <li>
+                <a href="/dashboard">DASHBOARD</a>
+            </li>
             <li class="menu-item has-drop-down">
                 <a>WORKBOOKS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
