-> Adjust CSS on parallel coordinates plot so long labels won't clip on the left -> Added horizontal scrolling when the plot viewport is too small -> Raised minimum size to 900px to account for longer labels

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -157,11 +157,13 @@
         display: inline-block
 
     #multi-categorical
-        overflow-x: hidden
+        overflow-x: auto
         min-height: 100px
         svg
+            padding-left: 150px
             display: block
-
+            width: 100%
+            min-width: 900px
         .dimension
             cursor: ew-resize
         .category
