--- a/templates/GenespotRE/igv.html
+++ b/templates/GenespotRE/igv.html
@@ -61,6 +61,7 @@
     </div>
     <script>
     var base_url = '{{ base_url }}';
+    var service_account = '{{ service_account }}';
     </script>
 {% endblock %}
 
