--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -148,6 +148,7 @@
     var ajax_update_url = '{% url 'cohort_filelist_ajax' cohort.id %}';
     var SEL_FILE_MAX = '{{  sel_file_max }}';
     var FILE_LIST_MAX = '{{  file_list_max }}';
+    var has_access = '{{ has_access }}';
     </script>
 {% endblock %}
 
